# robot-stack

./: .gitignore  README.md  WINDOWS_CODE_SIGNING_RENEWAL.md  build.py  go.py  justfile  pyproject.toml
.cursor/rules/: robot-stack.mdc
.github/: copilot-instructions.md
.github/workflows/: asset-inventory-pages.yml
automation/: __init__.py  app_manifest.py  apply_release_plan.py  asset_inventory.py  asset_urls.py  build.py  cloudfront_invalidation.py  flex_assets.py  flex_coordinated_tags.py  flex_release_strategy_docs.py  flex_release_version.py  flex_urls.py  go.py  invalidate_cloudfront.py  manifest.py  ot2_assets.py  ot2_calendar_semver.py  ot2_tag_allocation.py  ot2_urls.py  publish_assets_pages.py  release.py  release_asset_verification.py  release_branch_config.py  release_guides.py  release_plan.py  release_tag_catalog.py  robot_manifest.py  site_nav.py  test_apply_release_plan.py  test_asset_inventory.py  test_buildroot_tag_allocation.py  test_cloudfront_invalidation.py  test_flex_coordinated_tag_mapping.py  test_flex_coordinated_tags.py  test_flex_release_branching.py  test_flex_release_lanes.py  test_flex_release_strategy_docs.py  test_flex_release_version.py  test_ot2_tag_allocation.py  test_release_asset_verification.py  (+9 more)
