[project]
name = "robot-stack"
version = "0.1.0"
description = "Tools to inspect and build Opentrons robots"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "ruff>=0.11.5",
    "rust-just>=1.40.0",
    "semver>=3.0.4",
    "ty>=0.0.1a7",
    "types-pyyaml>=6.0.12.20250402",
]

# Black configuration removed in favor of Ruff formatter

[tool.ruff]
line-length = 130
target-version = "py313"
exclude = [
    ".git",
    ".venv",
    ".github",
    "buildroot",
    "opentrons",
    "ot3-firmware",
    "oe-core",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.isort]
case-sensitive = true
known-first-party = ["automation"]

[tool.ty.rules]
unused-ignore-comment = "error"
redundant-cast = "warn"
possibly-unbound-attribute = "error"
possibly-unbound-import = "error"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["automation"]
