[project]
name = "robot-stack"
version = "0.1.0"
description = "Tools to inspect and build Opentrons robots"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "ruff>=0.15.14",
    "rust-just>=1.51.0",
    "semver>=3.0.4",
    "ty>=0.0.39",
    "types-pyyaml>=6.0.12.20260518",
]

# Black configuration removed in favor of Ruff formatter

[tool.ruff]
line-length = 130
target-version = "py314"
exclude = [
    ".git",
    ".venv",
    ".github",
    "buildroot",
    "opentrons",
    "ot3-firmware",
    "oe-core",
    "opentrons-ot2",
    "robot-stack-infra",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.isort]
case-sensitive = true
known-first-party = ["automation"]

[tool.ruff.lint.per-file-ignores]
"automation/release_guides.py" = ["E501"]
"automation/flex_release_strategy_docs.py" = ["E501"]

[tool.ty.rules]
unused-ignore-comment = "error"
redundant-cast = "warn"
possibly-missing-attribute = "error"
possibly-missing-import = "error"

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["automation"]

[tool.uv]
package = true
